Fix footer to be at the bottom

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,11 @@
             </div>
     </header>
 
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+    <main class="flex-grow-1">
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+    </main>
     </div>
     <footer class="text-center">
         <p>Weather Dashboard Footer</p>
