--- a/weather/templates/weather/weather_dashboard.html
+++ b/weather/templates/weather/weather_dashboard.html
@@ -53,7 +53,13 @@
                     <img src="https://via.placeholder.com/50" alt="Weather icon">
                 </div>
             </div>
-            <!-- Add more days as needed -->
+            <div class="col-md-2">
+                <div class="card p-3 text-center">
+                    <h5>Sun</h5>
+                    <p class="temperature">23°C</p>
+                    <img src="https://via.placeholder.com/50" alt="Weather icon">
+                </div>
+            </div>
         </div>
     </div>
 </div>
