--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,19 @@
+html, body {
+    scroll-behavior: smooth;
+    height: 100%;
+    margin: 0;
+}
+
 body {
     background-color: #111827; /* Dark theme */
     color: #ffffff;
     font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
 }
 
 .card {
